# MSci-Project

./: .gitignore  .gitmodules  stack.yaml
AutoParallel-Fortran/: AutoParallel-Fortran.cabal  README.md  generate-ctags.sh  tags
AutoParallel-Fortran/.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: AutoParallel-Fortran-0.1.0.0  happy-1.19.5  haskell-src-1.0.2.0-3zoaErItXGVA1GHC7t3Glx  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-113irVHGgd88sRnywByDNw  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR
AutoParallel-Fortran/AutoparV1/: dyn_host.f95  main_host.f95  module_shapiro_dyn_vernieuw_superkernel.f95  module_shapiro_dyn_vernieuw_superkernel_ORIG.cl  module_shapiro_dyn_vernieuw_superkernel_after_CPP.cl  module_shapiro_dyn_vernieuw_superkernel_init.f95  rf4a_to_C.cfg  shapiro_host.f95  vernieuw_host.f95
AutoParallel-Fortran/Shallow-Water-2D/: dyn.f95  dyn_editable.f95  dyn_fused.f95  dyn_map_detection.f95  main.f95  main_tmp.f95  module_vernieuw.mod  output.txt  param.f95  shapiro.f95  shapiro_fused.f95  shapiro_map_detection.f95  vernieuw.f95  vernieuw_fused.f95  vernieuw_map_detection.f95
AutoParallel-Fortran/compiler/: Makefile
AutoParallel-Fortran/evaluation/coverage/: adam.f95  bondv1.f95  coverageTest.sh  feedbf.f95  les.f95  press.f95  vel2.f95  velFG.f95  velnw.f95
AutoParallel-Fortran/language-fortran.bak/: language-fortran.cabal
AutoParallel-Fortran/language-fortran.bak/src/: LexerTest.hs  ParserTest.hs
AutoParallel-Fortran/language-fortran.bak/src/Language/Fortran/: Lexer.hs  Pretty.hs
AutoParallel-Fortran/language-fortran/src/Language/Fortran/: Lexer.hs  Lexer.x  Parser.y
AutoParallel-Fortran/src/: CombineKernels.hs  ConstantFolding.hs  FortranSynthesiser.hs  LanguageFortranTools.hs  Main.hs  MiniPP.hs  Platform.hs  VarAccessAnalysis.hs  VarDependencyAnalysis.hs  parseF95Statement.hs
F3/: ChangeLog.md  README.md  for-loop.ast  package.yaml
F4/: .gitignore  ChangeLog.md  F4.cabal  LES_pipeline2_map_fold_detection.f95  README.md  StencilConstantTransform.f95  annotated.f95  assignment.txt  ast.txt  dyn_shapiro_vernieuw_device_code.mod  error.txt  temp  (+11 more)
(+460 files in other folders)
