name:                AutoParallel-Fortran
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wimvanderbauwhede/AutoParallel-Fortran#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          wim.vanderbauwhede@mail.be
copyright:           2016 Gavin Davidson, Wim Vanderbauwhede
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- library
--    hs-source-dirs:      src
--    exposed-modules:     
--    build-depends:       base >= 4.7 && < 5
--    default-language:    Haskell2010

--WV: I need better name, something like Glasgow Fortran to OpenCL compiler, gfortocl
executable AutoParallel-Fortran-exe
  hs-source-dirs:      src, language-fortran/src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers, syb, parsec, array, haskell-src, process, directory
--                     , AutoParallel-Fortran
--  ghc-options:         -O2 
--   -i./language-fortran/src
  default-language:    Haskell2010
  other-modules: BufferTransferAnalysis, CodeEmitter, CodeEmitterUtils, CombineKernels, ConstantFolding, F95IntrinsicFunctions, FortranGenerator, FortranSynthesiser, Language.Fortran, Language.Fortran.Lexer, Language.Fortran.Parser, Language.Fortran.PreProcess, LanguageFortranTools, LoopAnalysis, MiniPP, PreProcessor, SubroutineTable, Transformer, TupleTable, VarAccessAnalysis, VarDependencyAnalysis, Platform, Warning

test-suite AutoParallel-Fortran-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
--                     , AutoParallel-Fortran
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wimvanderbauwhede/AutoParallel-Fortran
